--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,6 +21,9 @@
         <li>
           <a href="{{ '/tag' | prepend: site.baseurl }}">小类内聚</a>
         </li>
+        <li>
+          <a href="{{ '/yiezi' | prepend: site.baseurl }}">个人简历</a>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
@@ -30,7 +33,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">关于<b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a rel="nofollow" target="_blank" href="{{site.github}}">Github</a></li>
-            <li><a rel="nofollow" target="_blank" href="{{site.resume_site}}">关于作者</a></li>
+            <li><a rel="nofollow" target="_blank" href="{{'/yiezi' | prepend: site.baseurl}}">关于作者</a></li>
             <li><a rel="nofollow" href="{{ '/books' | prepend: site.baseurl }}">我的书单</a></li>
             <li><a rel="nofollow" href="{{ '/reference' | prepend: site.baseurl }}">推荐博客</a></li>
             <li><a href="{{ '/feed.xml' | prepend: site.baseurl }}">RSS订阅</a></li>
